# loccol-bites

./: .gitignore  README.md
loccol-bites-backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
loccol-bites-frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml
