[tool.poetry]
name = "loccol-bites-backend"
version = "0.1.0"
description = ""
authors = ["ruperthjr <ruperthnyagesoa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.5"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
asyncpg = "^0.31.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
transformers = "^4.57.3"
sentence-transformers = "^5.1.2"
chromadb = "^1.3.5"
langchain = "^1.1.0"
openai = "^2.8.1"
tiktoken = "^0.12.0"
scikit-learn = "^1.7.2"
pandas = "^2.3.3"
numpy = "^2.3.5"
celery = "^5.6.0"
redis = "^7.1.0"
elasticsearch = "^9.2.0"
boto3 = "^1.42.2"
prometheus-client = "^0.23.1"
python-json-logger = "^4.0.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
python-dotenv = "^1.2.1"
aiofiles = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
black = "^25.11.0"
flake8 = "^7.3.0"
mypy = "^1.19.0"
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
