[tool.poetry]
name = "loccol-bites-backend"
version = "1.0.0"
description = "AI-powered food ordering platform backend"
authors = ["Loccol Bites Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^5.0.1"
celery = "^5.3.6"
boto3 = "^1.34.34"
httpx = "^0.26.0"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.0"
prometheus-client = "^0.19.0"
openai = "^1.10.0"
anthropic = "^0.18.0"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
langchain-openai = "^0.0.5"
sentence-transformers = "^2.3.1"
chromadb = "^0.4.22"
pandas = "^2.1.4"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
torch = "^2.1.2"
transformers = "^4.37.2"
elasticsearch = "^8.12.0"
stripe = "^7.11.0"
twilio = "^8.13.0"
sendgrid = "^6.11.0"
pillow = "^10.2.0"
aiofiles = "^23.2.1"
websockets = "^12.0"
gunicorn = "^21.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
faker = "^22.6.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true